Fix too much padding in about

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -307,10 +307,6 @@ a:focus {
 }
 
 @media(min-width:767px) {
-    .content-section {
-        padding-top: 250px;
-    }
-
     .download-section {
         padding: 100px 0;
     }
